<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CCWeibo</string>
    <string name="calc_name">TipCalculator</string>
    <string name="welcomeImage">welcomImage</string>
    <string name="tipcalc">TipCalculator</string>
    <string name="fav_twitter">Favourite Twitter search</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">I\'m big cat cat</string>
    <string name="headShotDescrip">headShot</string>
    <string name="billText">Bill total</string>
    <string name="tipText">Tip</string>
    <string name="totalText">Total</string>
    <string name="customText">Custom</string>
    <string name="tenText">10%</string>
    <string name="fifteenText">15%</string>
    <string name="twentyText">20%</string>
    <string name="unsetPrice">0.00</string>
    <string name="tipPercentText">18%</string>
    <string name="tipCalc">tipCalculator</string>
    <string name="startFavTwt">twitter</string>
    <string name="twitterSeachName">Favorite Twitter Searches</string>
    <string name="searchURL">https://twitter.com/search?q=</string>
    <string name="tagPrompt">Tag your query</string>
    <string name="queryPrompt">Enter Twitter search query here</string>
    <string name="taggedSearches">Tagged Searches</string>
    <string name="edit">Edit</string>
    <string name="clearTags">Clear Tags</string>
    <string name="save">Save</string>
    <string name="erase">Erase</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="missingTitle">Missing Text</string>
    <string name="missingMessage">         Please enter a search query and tag it.</string>
    <string name="confirmTitle">Are You Sure?</string>
    <string name="confirmMessage">         This will delete all saved searches</string>
    <string name="choices">Select Number of Choicies</string>
    <string name="correct">correct</string>
    <string name="flagQuiz">flagQuiz</string>
    <string name="guess_country">Guess the Country</string>
    <string name="guesses">guesses</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="more_regions_title">More Regions Required</string>
    <string name="more_regions_message">There are not enough countries in
         the selected regions. Please select more regions.</string>
    <string name="of">of</string>
    <string name="ok">OK</string>
    <string name="question">Question</string>
    <string name="quiz_title">Ten Question Flag Quiz</string>
    <string name="regions">Select Regions</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="mlgb">MLGB</string>
    <!-- define an array -->
    <string-array name="regionList">
        <item>Africa</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>North_America</item>
        <item>Oceania</item>
        <item>South_America</item>
    </string-array>
    <string-array name="guessesList">
        <item>3</item>
        <item>6</item>
        <item>9</item>
    </string-array>

    <string name="canonGame">Canon Game</string>
    <!-- %a$d print ath param in (d)ecimal format -->
    <string name="results_format">Shots fired: %1$d\nTotal time: %2$.1f</string>
    <string name="reset_game">Reset Game</string>
    <string name="win">You win!</string>
    <string name="lose">You lose!</string>
    <string name="time_remaining_format">Time remaining: %.1f seconds</string>
    <string name="tetris">Tetris</string>
    <string name="level">Level</string>
    <string name="score">score</string>

    <!-- Used by spotOn -->
    <string name="spoton">Spot On</string>
    <string name="highscore">High Score</string>

</resources>