<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/quiz_title"
        android:textColor="@color/text_color"
        android:textSize="@dimen/title_size" >
    </TextView>

    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size" >
    </TextView>

    <!-- android:adjustViewBounds sets whether we should keep width/height ratio when resizing -->

    <ImageView
        android:id="@+id/flagImageView"
        android:layout_width="@dimen/flag_width"
        android:layout_height="@dimen/flag_height"
        android:adjustViewBounds="false"
        android:contentDescription="@string/mlgb" />

    <TextView
        android:id="@+id/guessCountryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/guess_country"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size" />

    <TableLayout
        android:id="@+id/buttonTableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:stretchColumns="0,1,2" >

        <TableRow
            android:id="@+id/buttonTableRow0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TableRow
            android:id="@+id/buttonTableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TableRow
            android:id="@+id/buttonTableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </TableLayout>

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/answer_size"
        android:textStyle="bold" />

</LinearLayout>